--- a/src/c/CudaPy3DLL.vcxproj
+++ b/src/c/CudaPy3DLL.vcxproj
@@ -29,27 +29,27 @@
     <ClInclude Include="mph\preproc_helper.h" />
     <ClInclude Include="mph\qualifier_helpers.h" />
     <ClInclude Include="mph\tuple_helpers.h" />
+    <ClInclude Include="Python\PyArgConverter.h" />
     <ClInclude Include="Python\PyIncludes.h" />
     <ClInclude Include="Python\PyTypes.h" />
-    <ClInclude Include="WrapCmds\ArgConverter.h" />
-    <ClInclude Include="WrapCmds\GenCommands.h" />
-    <ClInclude Include="WrapCmds\PyArgConverter.h" />
-    <ClInclude Include="WrapCmds\ScrCmdClosure.h" />
-    <ClInclude Include="WrapCmds\ScrCmdDeviceCount.h" />
-    <ClInclude Include="WrapCmds\ScrCmdDeviceStats.h" />
-    <ClInclude Include="WrapCmds\ScrCmdHelp.h" />
-    <ClInclude Include="WrapCmds\ScrCmdInfo.h" />
-    <ClInclude Include="WrapCmds\ScriptCommand.h" />
-    <ClInclude Include="WrapCmds\ScriptCommandDefines.h" />
-    <ClInclude Include="WrapCmds\ScriptCommandModule.h" />
-    <ClInclude Include="WrapCmds\ScriptCommands.h" />
-    <ClInclude Include="WrapCmds\ScriptCommandImpl.h" />
-    <ClInclude Include="WrapCmds\ScriptHelpers.h" />
-    <ClInclude Include="WrapCmds\CommandList.h" />
-    <ClInclude Include="WrapCmds\ScriptIncludes.h" />
-    <ClInclude Include="WrapCmds\ScriptioMaps.h" />
-    <ClInclude Include="WrapCmds\ScriptTraits.h" />
-    <ClInclude Include="WrapCmds\ScriptTraitTfms.h" />
+    <ClInclude Include="ScriptCmds\ArgConverter.h" />
+    <ClInclude Include="ScriptCmds\GenCommands.h" />
+    <ClInclude Include="ScriptCmds\ScrCmdClosure.h" />
+    <ClInclude Include="ScriptCmds\ScrCmdDeviceCount.h" />
+    <ClInclude Include="ScriptCmds\ScrCmdDeviceStats.h" />
+    <ClInclude Include="ScriptCmds\ScrCmdHelp.h" />
+    <ClInclude Include="ScriptCmds\ScrCmdInfo.h" />
+    <ClInclude Include="ScriptCmds\ScriptCommand.h" />
+    <ClInclude Include="ScriptCmds\ScriptCommandDefines.h" />
+    <ClInclude Include="ScriptCmds\ScriptCommandModule.h" />
+    <ClInclude Include="ScriptCmds\ScriptCommands.h" />
+    <ClInclude Include="ScriptCmds\ScriptCommandImpl.h" />
+    <ClInclude Include="ScriptCmds\ScriptHelpers.h" />
+    <ClInclude Include="ScriptCmds\CommandList.h" />
+    <ClInclude Include="ScriptCmds\ScriptIncludes.h" />
+    <ClInclude Include="ScriptCmds\ScriptioMaps.h" />
+    <ClInclude Include="ScriptCmds\ScriptTraits.h" />
+    <ClInclude Include="ScriptCmds\ScriptTraitTfms.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
