Implemented all current filters in new paradigm

--- a/src/c/CudaMex.vcxproj
+++ b/src/c/CudaMex.vcxproj
@@ -104,12 +104,29 @@ copy $(OutDir)CudaMex.dll "$(ProjectDir)Mex.mexw64"</Command>
     <ClInclude Include="mph\qualifier_helpers.h" />
     <ClInclude Include="mph\tuple_helpers.h" />
     <ClInclude Include="ScriptCmds\ArgConverter.h" />
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdClosure.h" />
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdDeviceCount.h" />
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdDeviceStats.h" />
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdElementWiseDifference.h" />
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdEntropyFilter.h" />
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdGaussian.h" />
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdGetMinMax.h" />
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdHelp.h" />
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdHighPassFilter.h" />
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdIdentityFilter.h" />
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdInfo.h" />
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdLoG.h" />
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdMaxFilter.h" />
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdMeanFilter.h" />
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdMedianFilter.h" />
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdMinFilter.h" />
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdMultiplySum.h" />
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdOpener.h" />
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdStdFilter.h" />
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdSum.h" />
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdVarFilter.h" />
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdWienerFilter.h" />
     <ClInclude Include="ScriptCmds\GenCommands.h" />
-    <ClInclude Include="ScriptCmds\ScrCmdClosure.h" />
-    <ClInclude Include="ScriptCmds\ScrCmdDeviceCount.h" />
-    <ClInclude Include="ScriptCmds\ScrCmdDeviceStats.h" />
-    <ClInclude Include="ScriptCmds\ScrCmdHelp.h" />
-    <ClInclude Include="ScriptCmds\ScrCmdInfo.h" />
     <ClInclude Include="ScriptCmds\ScriptCommand.h" />
     <ClInclude Include="ScriptCmds\ScriptCommandDefines.h" />
     <ClInclude Include="ScriptCmds\ScriptCommandImpl.h" />
