--- a/src/c/CudaMex.vcxproj.filters
+++ b/src/c/CudaMex.vcxproj.filters
@@ -36,21 +36,6 @@
     <ClInclude Include="ScriptCmds\ScriptHelpers.h">
       <Filter>Header Files\ScriptCommand</Filter>
     </ClInclude>
-    <ClInclude Include="ScriptCmds\ScrCmdClosure.h">
-      <Filter>Header Files\Commands</Filter>
-    </ClInclude>
-    <ClInclude Include="ScriptCmds\ScrCmdDeviceCount.h">
-      <Filter>Header Files\Commands</Filter>
-    </ClInclude>
-    <ClInclude Include="ScriptCmds\ScrCmdDeviceStats.h">
-      <Filter>Header Files\Commands</Filter>
-    </ClInclude>
-    <ClInclude Include="ScriptCmds\ScrCmdHelp.h">
-      <Filter>Header Files\Commands</Filter>
-    </ClInclude>
-    <ClInclude Include="ScriptCmds\ScrCmdInfo.h">
-      <Filter>Header Files\Commands</Filter>
-    </ClInclude>
     <ClInclude Include="ScriptCmds\ScriptCommands.h">
       <Filter>Header Files\Commands</Filter>
     </ClInclude>
@@ -99,7 +84,70 @@
     <ClInclude Include="ScriptCmds\ScriptTraitTfms.h">
       <Filter>Header Files\ScriptCommand</Filter>
     </ClInclude>
-    <ClInclude Include="ScriptCmds\ScrCmdElementWiseDifference.h">
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdClosure.h">
+      <Filter>Header Files\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdDeviceCount.h">
+      <Filter>Header Files\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdDeviceStats.h">
+      <Filter>Header Files\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdElementWiseDifference.h">
+      <Filter>Header Files\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdEntropyFilter.h">
+      <Filter>Header Files\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdGaussian.h">
+      <Filter>Header Files\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdGetMinMax.h">
+      <Filter>Header Files\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdHelp.h">
+      <Filter>Header Files\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdHighPassFilter.h">
+      <Filter>Header Files\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdIdentityFilter.h">
+      <Filter>Header Files\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdInfo.h">
+      <Filter>Header Files\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdMaxFilter.h">
+      <Filter>Header Files\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdMeanFilter.h">
+      <Filter>Header Files\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdMedianFilter.h">
+      <Filter>Header Files\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdMinFilter.h">
+      <Filter>Header Files\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdMultiplySum.h">
+      <Filter>Header Files\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdOpener.h">
+      <Filter>Header Files\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdStdFilter.h">
+      <Filter>Header Files\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdSum.h">
+      <Filter>Header Files\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdVarFilter.h">
+      <Filter>Header Files\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdWienerFilter.h">
+      <Filter>Header Files\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="ScriptCmds\Commands\ScrCmdLoG.h">
       <Filter>Header Files\Commands</Filter>
     </ClInclude>
   </ItemGroup>
