--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@
 *.mat filter=lfs diff=lfs merge=lfs -text
 *.ai filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+*.so filter=lfs diff=lfs merge=lfs -text
+*.mexa64 filter=lfs diff=lfs merge=lfs -text
