Added def file back to compile with MATLAB 2018b

--- a/src/c/CudaMex.vcxproj.filters
+++ b/src/c/CudaMex.vcxproj.filters
@@ -163,5 +163,8 @@
     <None Include="Mex\_TemplateMex.cpp">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="CudaMex.def">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
